# libcanard

./: .gitignore  CMakeLists.txt  README.md
include/: canard.h  libcanard.h
include/drivers/: socketcan.h
src/: CMakeLists.txt
src/drivers/socketcan/: CMakeLists.txt  socketcan.c
src/lib/: CMakeLists.txt  allocateBlock.c  canard.c  canard_internals.h  convert_float.c  crcAdd.c  crcAddByte.c  crcAddSignature.c  freeBlock.c  initPoolAllocator.c
test/sample/: CMakeLists.txt  demo_send.c
test/uts/: CMakeLists.txt  main.c
